fix mobile hamburger color to make it visible

--- a/norwegian_ehealth/static_src/sass/components/_button.scss
+++ b/norwegian_ehealth/static_src/sass/components/_button.scss
@@ -27,7 +27,7 @@
         display: block;
         width: 100%;
         height: 4px;
-        background: $color--white;
+        background: $color--secondary;
         opacity: 1;
         transform: rotate(0deg);
         transition: top, width, opacity, transform, left, $transition;
